--- a/style/lestyle.css
+++ b/style/lestyle.css
@@ -16,3 +16,12 @@ a {
 .articleSpecial{
     text-decoration-line: underline;
 }
+
+#logotd{
+    background-image: url("images/tdlogo-ok.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 25px;
+    height: 25px;
+}
