--- a/style/lestyle.css
+++ b/style/lestyle.css
@@ -18,10 +18,10 @@ a {
 }
 
 #logotd{
+    width: 50px;
+    height: 50px;
     background-image: url("images/tdlogo-ok.png");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    width: 25px;
-    height: 25px;
 }
